--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app/SchoolEvents"
         ],
         "psr-4": {
             "App\\": "app/"
