--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "autoload": {
         "classmap": [
             "database",
-            "app/SchoolEvents"
+            "app/Widgets"
         ],
         "psr-4": {
             "App\\": "app/"
