Course listing and joining for them. Adding new lesson and them listing. Add disqus comment service for lessons. Button edit.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "barryvdh/laravel-ide-helper": "^2.0",
         "laravelcollective/html": "~5.0",
         "doctrine/dbal": "~2.3",
-        "pingpong/widget" : "~2.0"
+        "pingpong/widget" : "~2.0",
+        "intervention/image": "2.*",
+        "smart-crowd/laravel-rbac":"dev-master"
 
     },
     "require-dev": {
